<resources>
    <string name="app_name" translatable="false">BgnMobiPokemonAssignment</string>
    <string name="safeApiCall_noResult">Sonuç bulunamadı.</string>
    <string name="safeApiCall_timeoutError">İstek zaman aşımına uğradı.</string>
    <string name="safeApiCall_checkYourConnection">Lütfen internet bağlantınızı kontrol ediniz.</string>
    <string name="safeApiCall_unknownError">Bilinmeyen bir hata oluştu.</string>
    <string name="overlayPermissionWarning">Uygulamayı kullanabilmeniz için bu izni vermeniz gerekiyor.</string>
    <string name="overlayPermissionGrantedMessage">Favori Pokemonunu seçmeye başlayabilirsin!</string>
    <string name="giveMeOverlayPermission">Uygulamamın üstte kalmasına izin ver!</string>
    <string name="showInOverlay">%1$s Pencerede Göster</string>
    <string name="noInternetConnectionWarning">İnternet bağlantısı bulunamadı.</string>
    <string name="tryAgain">Yeniden Dene</string>
    <string name="closeApplication">Uygulamayı Kapat</string>
    <string name="menu_open">Menüyü Aç</string>
    <string name="menu_close">Menüyü Kapat</string>
    <string name="pokemon_name">Pokemon Adı: %1$s</string>
    <string name="pokemon_height">Pokemon Yüksekliği: %1$s m</string>
    <string name="pokemon_weight">Pokemon Ağırlığı: %1$s kg</string>
    <string name="contentDescription_pokemon_image">Pokemon Resmi</string>
    <string name="close_window">Pencereyi Kapat</string>
    <string name="warningIcon">Uyarı Simgesi</string>
</resources>